<resources>
    <string name="app_name">Un Nouveau Monde</string>

    <string name="action_settings">Paramètres</string>
    <string name="title_activity_parent">parent</string>
    <string name="title_activity_enfants">Enfants</string>
    <string name="envoyer">Envoyer</string>
    <string name="title_activity_activites">Activités</string>
    <string name="title_activity_login">Un Nouveau Monde</string>
    <string name="title_activity_statusinscription">Status des Inscriptions</string>
    <string name="title_activity_status_inscription">Inscriptions</string>
    <string name="title_activity_status_inscriptions">Status des Inscriptions</string>
    <string name="title_activity_SplashScreen">Un Nouveau Monde</string>
    <string name="notification">Notification Un Nouveau Monde</string>
    <string name="inscriptionvalide">Inscription validée</string>
    <string name="inscriptionattente">Inscription en attente</string>
    <string name="badusername">Erreur, nom d\'utilisateur ou mot de passe incorrect.</string>
    <string name="usernameorpasswordmissing">Erreur, nom d\'utilisateur ou mot de passe non renseigné.</string>
    <string name="error">Erreur.</string>
    <string name="errorconnexion">Erreur de connexion.</string>
    <string name="inscription">Inscription</string>
    <string name="statusinscriptions">Statut Inscriptions</string>
    <string name="siteweb">Site Web</string>
    <string name="programme">Programme</string>
    <string name="hello">Bonjour</string>
    <string name="errorcontactadministrator">Erreur, contactez l\'administrateur.</string>
    <string name="errorchildsigning">Erreur, enfant deja inscrit</string>
    <string name="signingok">Inscription correctement enregistrée.</string>
    <string name="errorfieldempty">Erreur, champ vide.</string>
    <string name="username">Nom d\'utilisateur :</string>
    <string name="password">Mot de passe :</string>
    <string name="cancel">Annuler</string>
    <string name="validate">Valider</string>
    <string name="mainmenu">Menu Principal</string>
    <string name="state">Etat :</string>
    <string name="pasinscription">Aucune inscription enregistrée.</string>
    <string name="droitconnection">Erreur, vous n\'avez pas l\'autorisation de vous connecter. Veuillez contacter l\'association.  </string>
    <string name="waitforinit">Chargement en cours, veuillez patienter</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_preferences">Préférences</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_web">web</string>
    <string name="title_activity_programme">Programme</string>
    <string name="logo">logo</string>
    <string name="dateDebut">Date début</string>
    <string name="dateFin">Date fin</string>
    <string name="boutonDescription">Description</string>
    <string name="title_activity_tarif">Tarifs</string>

    <string name="hello_world">Hello world!</string>
    <string name="Tarif">Tarif</string>
    <string name="Journée">Journée</string>
    <string name="JournéeR">Journée + Repas</string>
    <string name="DemiJournée">&#189; Journée</string>
    <string name="DemiJournéeR">&#189; Journée + Repas</string>
    <string name="Semaine">Semaine</string>
    <string name="DJ">Demi Journée</string>
    <string name="DJR">Demi Journée avec Repa</string>
    <string name="J">Journée</string>
    <string name="JR">Journée avec Repas</string>
    <string name="S">Semaine</string>
</resources>
