<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main">

    <Button
        android:id="@+id/bouton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/boutonStatus"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundcorner"
        android:text="@string/inscription" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bouton1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <Button
        android:id="@+id/boutonStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/roundcorner"
        android:text="@string/statusinscriptions" />

    <Button
        android:id="@+id/boutonSiteweb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boutonStatus"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundcorner"
        android:text="@string/siteweb" />

    <Button
        android:id="@+id/boutonProgramme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boutonSiteweb"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundcorner"
        android:text="@string/programme" />

    <Button
        android:id="@+id/boutonTarif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boutonProgramme"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundcorner"
        android:text="@string/Tarif" />


</RelativeLayout>
