<TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.unm.rodolphe.unnouveaumonde.TarifActivity"
        android:background="@drawable/background"
        android:id="@+id/label">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Journée"
                android:id="@+id/textView3"
                android:layout_column="0"
                android:background="@drawable/custom_border"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/JTarif"
                android:layout_column="1"
                android:background="@drawable/custom_border" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/JournéeR"
                android:id="@+id/textView4"
                android:layout_column="0"
                android:background="@drawable/custom_border"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/JRTarif"
                android:layout_column="1"
                android:background="@drawable/custom_border" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DemiJournée"
                android:id="@+id/textView2"
                android:layout_column="0"
                android:background="@drawable/custom_border"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/DJTarif"
                android:layout_column="1"
                android:background="@drawable/custom_border" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DemiJournéeR"
                android:id="@+id/textView5"
                android:layout_column="0"
                android:background="@drawable/custom_border"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/DJRTarif"
                android:layout_column="1"
                android:background="@drawable/custom_border" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Semaine"
                android:id="@+id/textView6"
                android:layout_column="0"
                android:background="@drawable/custom_border"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/STarif"
                android:layout_column="1"
                android:background="@drawable/custom_border" />

        </TableRow>

</TableLayout>
