<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.unm.unnouveaumonde.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Password"
        android:layout_alignRight="@+id/Password"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_toRightOf="@+id/textViewUsername"
        android:contentDescription="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewUsername"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_toEndOf="@+id/textViewUsername"
        android:layout_toRightOf="@+id/textViewUsername"
        android:contentDescription="@string/password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonSubmitLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/envoyer" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/username"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSubmitLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/password"
        android:textSize="18sp" />

</RelativeLayout>
